Added two new utilities

--- a/renderer/units/Departments of France/config.json
+++ b/renderer/units/Departments of France/config.json
@@ -1,3 +1,4 @@
 {
-    "category": "Geography"
+    "category": "Geography",
+    "description": "Full list of French departments, with live search"
 }
