--- a/renderer/units/Digital Clock/config.json
+++ b/renderer/units/Digital Clock/config.json
@@ -1,3 +1,4 @@
 {
-    "category": "Date & Time"
+    "category": "Date & Time",
+    "description": "Customizable clock, using language-sensitive text formatting for date and time"
 }
