--- a/renderer/units/LaTeX Math Renderer/config.json
+++ b/renderer/units/LaTeX Math Renderer/config.json
@@ -1,3 +1,4 @@
 {
-    "category": "Development"
+    "category": "Development",
+    "description": "LaTeX math expression renderer, using the KaTeX JavaScript library"
 }
