--- a/renderer/units/List of U.S. States/config.json
+++ b/renderer/units/List of U.S. States/config.json
@@ -1,3 +1,4 @@
 {
-    "category": "Geography"
+    "category": "Geography",
+    "description": "Full list of states and territories of the United States, with live search"
 }
