--- a/renderer/units/Roman Numerals/config.json
+++ b/renderer/units/Roman Numerals/config.json
@@ -1,3 +1,4 @@
 {
-    "category": "Conversion Tools"
+    "category": "Conversion Tools",
+    "description": "Converters between roman and arabic numerals"
 }
