--- a/renderer/units/System Information/config.json
+++ b/renderer/units/System Information/config.json
@@ -1,3 +1,4 @@
 {
-    "category": "Development"
+    "category": "Development",
+    "description": "Detailed list of system information, by category"
 }
