--- a/renderer/units/HTTP Status Codes/config.json
+++ b/renderer/units/HTTP Status Codes/config.json
@@ -1,3 +1,4 @@
 {
-    "category": "Internet"
+    "category": "Internet",
+    "description": "Full list of HTTP status codes, with definitions in several languages"
 }
