--- a/renderer/units/ISO Country Codes/config.json
+++ b/renderer/units/ISO Country Codes/config.json
@@ -1,3 +1,4 @@
 {
-    "category": "Internet"
+    "category": "Internet",
+    "description": "Full list of ISO 3166-1 country codes, with live search"
 }
