--- a/renderer/units/Prefectures of Japan/config.json
+++ b/renderer/units/Prefectures of Japan/config.json
@@ -1,3 +1,4 @@
 {
-    "category": "Geography"
+    "category": "Geography",
+    "description": "Full list of prefectures of Japan, with live search"
 }
