Updated version to 1.2.0

--- a/main/settings.json
+++ b/main/settings.json
@@ -17,7 +17,7 @@
     "unitsName": "Titles",
     "noCategoryName": "Other",
     "description": "Collection of utilities wrapped into one single app.",
-    "copyright": "© 2017 Michel MARIANI.",
+    "copyright": "© 2017-2018 Michel MARIANI.",
     "homePage":
     {
         "label": "Home Page",
