--- a/renderer/units/Trigonometric Formulas/config.json
+++ b/renderer/units/Trigonometric Formulas/config.json
@@ -1,4 +1,4 @@
 {
-    "category": "Education",
+    "category": "Mathematics",
     "description": "Sets of trigonometric formulas, by category"
 }
