--- a/renderer/units/Unicode Inspector/config.json
+++ b/renderer/units/Unicode Inspector/config.json
@@ -1,4 +1,4 @@
 {
-    "category": "Development",
+    "category": "Characters",
     "description": "Code point information of Unicode characters"
 }
