--- a/renderer/units/System Information/config.json
+++ b/renderer/units/System Information/config.json
@@ -1,4 +1,4 @@
 {
-    "category": "Development",
+    "category": "Framework",
     "description": "Detailed list of system information, by category"
 }
