Updated version to 1.3.0

--- a/main/settings.json
+++ b/main/settings.json
@@ -3,6 +3,7 @@
     "hotKey": "CommandOrControl+Alt+V",
     "unitsMenu": true,
     "developerMenu": true,
+    "smartZoom": false,
     "window":
     {
         "defaultWidth": 1080,
