--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vade-mecum-shelf",
   "productName": "Vade Mecum Shelf",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Collection of utilities wrapped into one single app.",
   "main": "main/main.js",
   "scripts": {
@@ -32,7 +32,7 @@
   "private": false,
   "dependencies": {},
   "devDependencies": {
-    "electron": "^1.7.10",
-    "electron-packager": "^9.1.0"
+    "electron": "1.8.2",
+    "electron-packager": "^10.1.2"
   }
 }
