--- a/package.json
+++ b/package.json
@@ -1,38 +1,44 @@
 {
-  "name": "vade-mecum-shelf",
-  "productName": "Vade Mecum Shelf",
-  "version": "1.3.0",
-  "description": "Collection of utilities wrapped into one single app.",
-  "main": "main/main.js",
-  "scripts": {
-    "start": "electron .",
-    "build-darwin-no-asar": "electron-packager . --out=build --platform=darwin --ignore=/~.* --icon=icons/icon.icns --overwrite",
-    "build-darwin": "electron-packager . --out=build --platform=darwin --ignore=/~.* --asar.unpack=LICENSE.txt --icon=icons/icon.icns --overwrite",
-    "build-linux": "electron-packager . --out=build --platform=linux --ignore=/~.* --asar.unpack=LICENSE.txt --icon=icons/icon.png --overwrite",
-    "build-mas": "electron-packager . --out=build --platform=mas --ignore=/~.* --asar.unpack=LICENSE.txt --icon=icons/icon.icns --overwrite",
-    "build-win32": "electron-packager . --out=build --platform=win32 --ignore=/~.* --asar.unpack=LICENSE.txt --icon=icons/icon.ico --overwrite",
-    "build-all": "electron-packager . --out=build --platform=all --ignore=/~.* --asar.unpack=LICENSE.txt --icon=icons/icon --overwrite"
-  },
-  "keywords": [
-    "app",
-    "collection",
-    "customizable",
-    "electron",
-    "modular",
-    "shelf",
-    "utility",
-    "vade mecum"
-  ],
-  "author": {
-    "name": "Michel MARIANI",
-    "url": "https://github.com/tonton-pixel"
-  },
-  "homepage": "https://github.com/tonton-pixel/vade-mecum-shelf",
-  "license": "MIT",
-  "private": false,
-  "dependencies": {},
-  "devDependencies": {
-    "electron": "1.8.2",
-    "electron-packager": "^10.1.2"
-  }
+    "name": "vade-mecum-shelf",
+    "productName": "Vade Mecum Shelf",
+    "version": "1.4.0",
+    "description": "Collection of utilities wrapped into one single app.",
+    "main": "main/main.js",
+    "scripts":
+    {
+        "start": "electron .",
+        "build-darwin-no-asar": "electron-packager . --out=build --platform=darwin --ignore=/~.* --icon=icons/icon.icns --overwrite",
+        "build-darwin": "electron-packager . --out=build --platform=darwin --ignore=/~.* --asar.unpack=LICENSE.txt --icon=icons/icon.icns --overwrite",
+        "build-linux": "electron-packager . --out=build --platform=linux --ignore=/~.* --asar.unpack=LICENSE.txt --icon=icons/icon.png --overwrite",
+        "build-mas": "electron-packager . --out=build --platform=mas --ignore=/~.* --asar.unpack=LICENSE.txt --icon=icons/icon.icns --overwrite",
+        "build-win32": "electron-packager . --out=build --platform=win32 --ignore=/~.* --asar.unpack=LICENSE.txt --icon=icons/icon.ico --overwrite",
+        "build-all": "electron-packager . --out=build --platform=all --ignore=/~.* --asar.unpack=LICENSE.txt --icon=icons/icon --overwrite"
+    },
+    "keywords":
+    [
+        "app",
+        "collection",
+        "customizable",
+        "electron",
+        "modular",
+        "shelf",
+        "utility",
+        "vade mecum"
+    ],
+    "author":
+    {
+        "name": "Michel MARIANI",
+        "url": "https://github.com/tonton-pixel"
+    },
+    "homepage": "https://github.com/tonton-pixel/vade-mecum-shelf",
+    "license": "MIT",
+    "private": false,
+    "dependencies":
+    {
+    },
+    "devDependencies":
+    {
+        "electron": "1.8.4",
+        "electron-packager": "^10.1.2"
+    }
 }
