--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "vade-mecum-shelf",
     "productName": "Vade Mecum Shelf",
-    "version": "1.7.0",
+    "version": "1.8.0",
     "description": "Collection of utilities wrapped into one single app.",
     "main": "main/main.js",
     "scripts": {
@@ -30,7 +30,9 @@
     "homepage": "https://github.com/tonton-pixel/vade-mecum-shelf",
     "license": "MIT",
     "private": false,
-    "dependencies": {},
+    "dependencies": {
+        "regexpu-core": "^4.2.0"
+    },
     "devDependencies": {
         "electron": "^1.8.7",
         "electron-packager": "^12.1.0"
