--- a/renderer/units/Emoji Data Finder/config.json
+++ b/renderer/units/Emoji Data Finder/config.json
@@ -1,4 +1,4 @@
 {
     "category": "Characters",
-    "description": "Get data (short name, keywords, codes) of Unicode emoji characters found in a string"
+    "description": "Data (short name, keywords, code) of Unicode emoji characters extracted from a string"
 }
