Updated app to version 1.8.5

--- a/settings.json
+++ b/settings.json
@@ -3,7 +3,7 @@
     "hotKey": "CommandOrControl+Alt+V",
     "escapeExitsFullScreen": true,
     "unitsMenu": true,
-    "developerMenu": true,
+    "developerFeatures": true,
     "smartZoom": false,
     "window":
     {
