--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "vade-mecum-shelf",
     "productName": "Vade Mecum Shelf",
-    "version": "2.5.2",
-    "description": "Collection of vade mecum-like utilities wrapped into one single app.",
+    "version": "2.5.3",
+    "description": "Collection of vade mecum-like utilities.",
     "main": "main.js",
     "scripts": {
         "start": "electron .",
@@ -12,7 +12,7 @@
         "build-win32": "electron-packager . --asar --out=build --platform=win32 --ignore=/~.* --ignore=^/screenshots --icon=icons/icon.ico --overwrite"
     },
     "keywords": [
-        "app",
+        "application",
         "collection",
         "desktop",
         "electron",
@@ -30,7 +30,7 @@
     "private": false,
     "dependencies": {},
     "devDependencies": {
-        "electron": "^8.2.3",
+        "electron": "^8.2.4",
         "electron-packager": "^14.2.1"
     }
 }
