Updated app to version 2.8.0

--- a/settings.json
+++ b/settings.json
@@ -28,7 +28,7 @@
     "electronApp":
     {
         "label": "Vade Mecum Shelf | Apps | Electron",
-        "URL": "https://electronjs.org/apps/vade-mecum-shelf"
+        "URL": "https://www.electronjs.org/apps/vade-mecum-shelf"
     },
     "repository":
     {
