Updated app to version 3.5.1

--- a/settings.json
+++ b/settings.json
@@ -40,5 +40,6 @@
         "label": "Latest Releases",
         "URL": "https://github.com/tonton-pixel/vade-mecum-shelf/releases"
     },
-    "defaultFolder": "documents"
+    "defaultFolder": "documents",
+    "confirmQuit": false
 }
