--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "vade-mecum-shelf",
     "productName": "Vade Mecum Shelf",
-    "version": "3.6.0",
+    "version": "3.7.0",
     "description": "Collection of vade mecum-like utilities.",
     "main": "main.js",
     "scripts": {
@@ -68,8 +68,11 @@
     "homepage": "https://github.com/tonton-pixel/vade-mecum-shelf",
     "license": "MIT",
     "private": false,
+    "dependencies": {
+        "@electron/remote": "^1.1.0"
+    },
     "devDependencies": {
-        "electron": "^13.0.1",
+        "electron": "^13.1.0",
         "electron-builder": "22.10.5",
         "electron-packager": "^15.2.0"
     }
